2006-03-13  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Mikhail Zabaluev  <mhz altlinux org>

	* autogen.sh:
	  Don't check for file that only exists in CVS but isn't
	  disted (#334417)

2006-03-13  Julien MOUTTE  <julien@moutte.net>

	* docs/plugins/gst-plugins-bad-plugins-decl-list.txt:
	* sys/v4l2/Makefile.am: Fix build of v4l2 (sigh)

2006-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	* configure.ac:
	  Fix distcheck.

2006-03-12  Edward Hervey  <edward@fluendo.com>

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_capture_init),
	(gst_v4l2src_buffer_pool_free):
	g_atomic_int_set is only available in glib-0.10, use gst_atomic_int_et
	instead.

2006-03-12  Edward Hervey  <edward@fluendo.com>

	* sys/v4l2/gstv4l2element.h:
	Remove tim's addition of "_stdint.h" since it doesn't make the PPC
	buildbot happy.
	I will just use the same comment Ronald used when he added these lines:
	Yet Another Hack (tm) for kernel header borkedness.

2006-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/taglib/Makefile.am:
	* ext/taglib/gsttaglib.cc:
	* ext/taglib/gsttaglib.h:
	  Add support for writing MusicBrainz IDs.

2006-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/v4l2/gstv4l2element.h:
	  Include "_stdint.h" in an attempt to make the
	  PPC-buildbot happy.

2006-03-11  Edgard Lima  <edgard.lima@indt.org.br>

	* configure.ac:
	* sys/Makefile.am:
	* sys/v4l2/Makefile.am:
	* sys/v4l2/gstv4l2.c:
	* sys/v4l2/gstv4l2colorbalance.h:
	* sys/v4l2/gstv4l2element.c:
	* sys/v4l2/gstv4l2element.h:
	* sys/v4l2/gstv4l2src.c:
	* sys/v4l2/gstv4l2src.h:
	* sys/v4l2/gstv4l2tuner.c:
	* sys/v4l2/gstv4l2tuner.h:
	* sys/v4l2/gstv4l2xoverlay.c:
	* sys/v4l2/gstv4l2xoverlay.h:
	* sys/v4l2/v4l2_calls.c:
	* sys/v4l2/v4l2_calls.h:
	* sys/v4l2/v4l2src_calls.c:
	* sys/v4l2/v4l2src_calls.h:
	V4L2 ported to 0.10.
	
2006-03-11  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac: